# Pacman

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Doxyfile  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  Ghost.cpp  Ghost.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  Orb.cpp  Orb.h  Pacman.cpp  Pacman.h  PausedState.cpp  PausedState.h  README.MD  SFMLFactory.cpp  SFMLFactory.h  SFMLGhostView.cpp  SFMLGhostView.h  SFMLOrbView.cpp  SFMLOrbView.h  SFMLPacmanView.cpp  SFMLPacmanView.h  SFMLView.cpp  SFMLView.h  SFMLWallView.cpp  SFMLWallView.h  Score.cpp  Score.h  State.cpp  State.h  (+14 more)
.circleci/: config.yml
entities/: Entity.cpp  Entity.h  Orb.cpp  Orb.h  Pacman.cpp  Pacman.h  Position.h  PowerOrb.cpp  PowerOrb.h  Wall.cpp  Wall.h
entities/Collectable/: Fruit.cpp  Orb.cpp  Orb.h  PowerOrb.cpp
entities/collectable/: Fruit.cpp  Fruit.h  Orb.cpp  Orb.h  PowerOrb.cpp  PowerOrb.h
entities/ghost/: ChaseGhost.cpp  ChaseGhost.h  Ghost.cpp  Ghost.h  LockedGhost.cpp  LockedGhost.h  PredictGhost.cpp  PredictGhost.h
factory/: EntityFactory.cpp  EntityFactory.h  SFMLFactory.cpp  SFMLFactory.h  SpriteAtlas.cpp  SpriteAtlas.h  Sprite_IDs.h
singleton/: Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h
sounds/: SFMLWorldSounds.cpp  SFMLWorldSounds.h  WorldSound.cpp  WorldSound.h
states/: LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
views/: SFMLOrbView.cpp  SFMLOrbView.h  SFMLPacmanView.cpp  SFMLPacmanView.h  SFMLPowerOrbView.cpp  SFMLView.cpp  SFMLView.h  SFMLWallView.cpp  SFMLWallView.h  SFMLWorldView.cpp  SFMLWorldView.h  View.cpp  View.h
views/collectableview/: SFMLFruitView.cpp  SFMLFruitView.h  SFMLOrbView.cpp  SFMLOrbView.h  SFMLPowerOrbView.cpp  SFMLPowerOrbView.h
views/ghostview/: SFMLChaseGhostView.cpp  SFMLChaseGhostView.h  SFMLGhostView.cpp  SFMLGhostView.h  SFMLLockedGhostView.cpp  SFMLLockedGhostView.h  SFMLPredictGhost1View.cpp  SFMLPredictGhost1View.h  SFMLPredictGhost2View.cpp  SFMLPredictGhost2View.h
